testsuite/poke.pkl/cdiv-integers-diag-2.pk
/* { dg-do compile } */

var o = 13#B;
var res = 10 /^
          13#B; /* { dg-error "invalid operand.*\n.*expected integral" } */
